--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     ]
   },
   "dependencies": {
-    "electron-is-dev": "^1.1.0",
-    "electron-next": "^3.1.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "electron-is-dev": "2.0.0",
+    "electron-next": "3.1.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.6",
-    "@types/react": "^16.9.9",
-    "@types/react-dom": "^16.9.9",
-    "electron": "^13",
-    "electron-builder": "^23.0.3",
-    "next": "latest",
-    "rimraf": "^3.0.0",
-    "typescript": "^4.0.5"
+    "@types/node": "18.15.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "electron": "23.1.3",
+    "electron-builder": "23.0.3",
+    "next": "12.3.4",
+    "rimraf": "3.0.0",
+    "typescript": "4.9.5"
   },
   "main": "main/index.js",
   "private": true,
@@ -30,7 +30,7 @@
     "build-electron": "tsc -p electron-src",
     "build-renderer": "next build renderer && next export renderer",
     "clean": "rimraf dist main renderer/out renderer/.next",
-    "dev": "npm run build-electron && electron providing-parameters-when-creating-new-window-in-electron",
+    "dev": "npm run build-electron && electron .",
     "dist": "npm run build && electron-builder",
     "pack-app": "npm run build && electron-builder --dir",
     "type-check": "tsc -p renderer/tsconfig.json && tsc -p ./electron-src/tsconfig.json"
