--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "rimraf": "3.0.0",
     "typescript": "4.9.5"
   },
+  "engines": {
+    "node": "18.12.1",
+    "npm": "8.19.2"
+  },
   "main": "main/index.js",
   "private": true,
   "productName": "ElectronTypescriptNext",
