--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "electron": "23.1.3",
     "electron-builder": "23.0.3",
     "next": "12.3.4",
+    "prettier": "2.8.4",
     "rimraf": "3.0.0",
     "typescript": "4.9.5"
   },
